@@ -1,4 +1,8 @@
-﻿drkns 26.12.2013 01:21:42 +0200 - build 3746
+﻿drkns 26.12.2013 19:36:19 +0200 - build 3747
+
+1. Уточнение 3746.
+
+drkns 26.12.2013 01:21:42 +0200 - build 3746
 
 1. Рефакторинг.
 
